@@ -36,10 +36,8 @@
 
 #if HAVE_INTTYPES_H
 #include <inttypes.h>
-#else
-#if HAVE_STDINT_H
+#elif HAVE_STDINT_H
 #include <stdint.h>
-#endif
 #endif
 
 #if HAVE_ERRNO_H
